<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AceRoute</string>
    <string name="hello_world1">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ID_CHOOSE_IMAGE_OPTION">Choose image options</string>
    <string name="ID_OK">Ok</string>
    <string name="ID_CANCEL">Cancel</string>
    <!-- <string name="ID_WAYS_SELECT_CAMERA">Select camera</string> -->

    <string name="ID_WAYS_SELECT_YOUR_GALLARY">Select from gallery</string>
    <string name="ID_NO_PHOTO_PICKED">No photo picked please try again</string>
    <string name="ID_WAYS_SELECT_CAMERA">Select camera</string>
    <string name="title_activity_add_site_acty">AddSiteActy</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- offline skobller use string -->
    <string name="hello_world">Load map offline</string>
    <string name="update_label">Update</string>
    <string name="cancel_label">Cancel</string>
    <string name="route_calculation_failed">Route calculation failed</string>
    <string name="stop_navigation">Stop navigation</string>
    <string name="start_navigation">Start navigation</string>
    <string name="calculate_route">Calculate route</string>
    <string name="navigate">Navigate</string>
    <string name="label_position_me">Position me</string>
    <string name="label_heading">Heading</string>
    <string name="option_routing_and_navigation">Routing and navigation</string>
    <string name="option_routing_and_navigation_here">Nokia here navigation</string>
    <string name="downloadmap">Download Maps</string>
    <string name="option_map_xml_and_downloads">Map XML &amp; downloads</string>
    <string name="options_group_map">Map</string>
    <string name="label_download">Download</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_position_available">Current position is not available</string>
    <string name="title_activity_checkactivity">Checkactivity</string>
    <string name="title_activity_get_order">GetOrderActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_splash_ii">SplashII</string>
    <string name="tab_job">Inbox</string>
    <string name="tab_map">Map</string>
    <string name="tab_clockin">Clocked In</string>
    <string name="tab_opt">More</string>
    <string name="tab_clockout">Clocked Out</string>
    <!-- Create Order -->

    <string name="lbl_ordname">ORDER NAME</string>
    <string name="lbl_loc_cmnt">DESCRIPTION</string>
    <string name="lbl_type">CATEGORY</string>
    <string name="lbl_cust_nm">CUSTOMER NAME</string>
    <string name="lbl_location">LOCATION</string>
    <string name="lbl_sch_dt">SCHEDULE DATE</string>
    <string name="lbl_assign_worker">ASSIGNED WORKER</string>
    <string name="lbl_srt_tm">START TIME</string>
    <string name="lbl_duration">DURATION</string>
    <string name="lbl_alerts">ALERTS</string>
    <string name="lbl_ponum">INVOICE#</string>
    <string name="lbl_ssd">Customer</string>
    <string name="lbl_status">STATUS</string>
    <string name="lbl_priority">PRIORITY</string>
    <string name="lbl_asd_wkr">ASSIGNED WORKER</string>
    <string name="lbl_sch">Schedule</string>
    <string name="lbl_waypoint">Log Breadcrumb</string>
    <string name="lbl_save_changes">Save Updates</string>

    <!-- Tree Detail screen -->
    <string name="lbl_tree_status">STATUS</string>
    <string name="lbl_tree_crew_type">TASK CREW TYPE</string>
    <string name="lbl_tree_hours">CUSTOMER AT LOCATION</string>
    <string name="lbl_restriction">RESTRICTION</string>
    <string name="lbl_notification">NOTIFICATION</string>

    <!-- -order detail screen -->

    <string name="lbl_customer">Site</string>
    <string name="lbl_scheduled">Scheduled</string>
    <string name="lbl_tree">Trees</string>
    <string name="lbl_material">Material</string>
    <string name="lbl_workers">Workers</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_date_time">Date/Time</string>
    <string name="lbl_snap">Snap It</string>
    <string name="lbl_say">Say It</string>
    <string name="lbl_type_it">Type It</string>
    <string name="lbl_sign">Sign It</string>
    <string name="msg_delete">Would you like to continue?</string>
    <string name="msg_title">Delete Confirmation</string>
    <string name="msg_map_delete">Do you want to delete?</string>
    <string name="msg_delete_history_file">Customer Order History is a system generated historical data file and may not be deleted by user.</string>

    <!-- Generic Message -->
    <string name="msg_sim_ntwrk">Sim not available</string>
    <string name="msg_sms_sent">SMS sent.</string>
    <string name="msg_sms_failed">SMS faild, please try again</string>
    <string name="msg_contact_number">Contact number not available</string>
    <string name="lbl_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_required_field">Required Field</string>
    <string name="msg_slight_problem">Slight problem with data</string>
    <string name="msg_internet_problem">No internet connection</string>
    <string name="msg_signature_problem">Please add signature</string>
    <string name="msg_about_aceroute">About AceRoute</string>
    <string name="msg_field_service_management">Field Service Management</string>
    <string name="msg_right_person_time">Right Person. Right Place. Right Time.</string>

    <!-- Order Task -->
    <string name="tag_fragment_name">Add Task</string>
    <string name="lbl_task_type">CATEGORY</string>
    <string name="lbl_task_rate">COUNT</string>

    <!-- Tags for coding purpose -->
    <string name="tag_order">Order</string>
    <string name="tag_alert">Alert</string>
    <string name="tag_notee">Notee</string>
    <string name="tag_status">Status</string>
    <string name="tag_sch">scheduled</string>
    <string name="orderid">OLMP_orderid</string>
    <string name="title_audio">JOB AUDIO</string>
    <string name="lbl_start">Record</string>
    <string name="lbl_stop">Stop</string>
    <string name="lbl_play">Play</string>
    <string name="msg_play">Do You want to Play</string>
    <string name="msg_record_audio">Please record audio message</string>
    <string name="msg_audio_play_problem">Audio can not play</string>

    <!-- <Status Dialog List> -->
    <string name="title_operational">Operational</string>
    <string name="title_exception">Exception</string>
    <string name="title_planning">Planning</string>
    <string name="title_billing">Billing</string>

    <!-- Customer Details Screen -->
    <string name="lbl_edit_contact">Edit</string>
    <string name="lbl_call_contact">Call</string>
    <string name="lbl_edit_site">Edit</string>
    <string name="lbl_dlg_contact_name">NAME</string>
    <string name="lbl_dlg_site_name">NAME</string>
    <string name="lbl_dlg_contact_phone">PHONE</string>
    <string name="lbl_dlg_address2">SUITE/APT#</string>
    <string name="lbl_dlg_contact_phone_type">PREFERRED COMM. METHOD</string>
    <string name="lbl_dlg_description">DESCRIPTION</string>
    <string name="lbl_dlg_odr_category">CATEGORY</string>
    <string name="lbl_dlg_alert">ALERTS</string>
    <string name="lbl_dlg_ssd">INVOICE#</string>
    <string name="lbl_dlg_route">ROUTE#</string>
    <string name="lbl_dlg_ntw">PO#</string>
    <string name="lbl_tree_updates">Save Updates</string>
    <string name="lbl_upd_message">Do you want to save updates and continue?</string>
    <string name="update_message">Do you want to save updates?</string>

    <string name="lbl_breadcrumb">Geocode Unavailable</string>
    <string name="lbl_breadcrumb_message">Please try again</string>
    <string name="lbl_logout_title">Logout</string>
    <string name="lbl_logout_message">Do you want to continue?</string>
    <string name="lbl_refresh_title">Refresh Data</string>

    <string name="lbl_autosync_title">Setup Auto Sync Frequency</string>
    <!-- Alert n Note Screen -->
    <string name="lbl_note">NOTES</string>
    <string name="lbl_dtl">MAKE/MODEL/COLOUR</string>
    <string name="lbl_po">REGISTRATION</string>
    <string name="lbl_inv">ODOMETER</string>
    <string name="lbl_dlg_contact_email">EMAIL</string>
    <string name="title_activity_main123123131">Main123123131Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parent_value">Parent Value</string>

</resources>